NIAD-971: removed redundant null check from mapObservations